[package]
name = "rust-sdl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
image = "0.23"

[dependencies.sdl2]
git = "https://github.com/rust-sdl2/rust-sdl2"
default-features = false
features = ["ttf","image","gfx","mixer"]
